@@ -1,0 +1,7 @@
+* Added `BlockCommandHandler` to `grizzled`.cmd, to handle commands consisting
+  of blocks of lines between a start and end line.
+* Added `HiddenCommandHandler` to `grizzled.cmd`, allowing special commands 
+  that are not displayed in the help.
+* Changed EOF handling in `grizzled.cmd` slightly.
+* Fixed problem with prefix handling in `grizzled.string.WordWrapper`.
+* Now uses sbt 0.7.2
